summer-jaeb/tests/compile_fail/unknown_attr.stderr
error: unknown attribute `unknown`, expected one of: retries, retry_strategy, retry_base_ms, retry_max_ms, dead_letter, priority, name
 --> tests/compile_fail/unknown_attr.rs:9:18
  |
9 | #[event_listener(unknown = 42)]
  |                  ^^^^^^^

warning: unused import: `jaeb::HandlerResult`
 --> tests/compile_fail/unknown_attr.rs:3:5
  |
3 | use jaeb::HandlerResult;
  |     ^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
